--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "jest": "22.4.2",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "lodash": "^4.17.13",
+    "lodash.template": "^4.5.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
